changed title position

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <div>
                 <h1>AI SOCCER COACH</h1>
                 <hr class="straight-line">
-                <h1 style="padding-left:330px">GOLDEN FOOT</h1>
-                <div id="intro-tag-btn", class="straight-line2">
+                <h1>GOLDEN FOOT</h1>
+                <div id="intro-tag-btn">
                     <span>Certified by Lionel Messi</span>
                     <a href="" class="brand-btn">GOALLL!!!</a>
                 </div>
