--- a/index.html
+++ b/index.html
@@ -31,12 +31,8 @@
             </div>
             <div class="mainMenu">
                 <div class="mainfont">
-                <a href=""><span>Technology</span></a>
-                <a href=""><span>Service</span></a>
-                <a href=""><span>Portfolio</span></a>
-                <a href=""><span>About Us</span></a>
-                <a href=""><span>Career</span></a>
-                <a href=""><span>Blog</span></a>
+                <a href=""><span>Home</span></a>
+                <a href=""><span>AI Coach</span></a>
                 <a href="">Work With Us</a>
                 </div class="mainfont">
             </div class="mainMenu">
@@ -48,8 +44,8 @@
             <div>
                 <h1>AI SOCCER COACH</h1>
                 <hr class="straight-line">
-                <h1>GOLDEN FOOT</h1>
-                <div id="intro-tag-btn">
+                <h1 style="padding-left:330px">GOLDEN FOOT</h1>
+                <div id="intro-tag-btn", class="straight-line2">
                     <span>Certified by Lionel Messi</span>
                     <a href="" class="brand-btn">GOALLL!!!</a>
                 </div>
