--- a/index.html
+++ b/index.html
@@ -19,21 +19,17 @@
 <body>    
     
     <header id="topHeader">
-        <ul id="topInfo">
-            <li>+974 98765432</li>
-            <li>info@itecnology.com</li>
-        </ul>
         
         <nav>
+            <img id="logodesign" src="logo.png">
             <span class="logo">MessiVision</span>
             <div class="menu-btn-3" onclick="menuBtnFunction(this)">
                 <span></span>
             </div>
             <div class="mainMenu">
                 <div class="mainfont">
-                <a href=""><span>Home</span></a>
-                <a href=""><span>AI Coach</span></a>
-                <a href="">Work With Us</a>
+                <a id = "homeButt"href=""><span>Home</span></a>
+                <a id = "camButt" href=""><span>AI Coach</span></a>
                 </div class="mainfont">
             </div class="mainMenu">
         </nav>
@@ -64,7 +60,7 @@
     <section id="delivery">
         <h1 id="services" class="sec-heading">SERVICES</h1>
         <div class="col-5 delivery-img">
-            <img src="https://www.dropbox.com/s/ipx91osglyczpdt/delivery_experience.svg?raw=1" alt="Productivity Delivering Experience" title="Delivering Experience Since 2009"/>
+            <img src="aisock.png" alt="Productivity Delivering Experience" title="Delivering Experience Since 2009"/>
         </div>
         <div class="col-7">
             <h2>AI SOCCER COACH</h2>
@@ -83,7 +79,7 @@
 </br>
 </br>
         <div class="col-5 delivery-img">
-            <img src="https://www.dropbox.com/s/ipx91osglyczpdt/delivery_experience.svg?raw=1" alt="Productivity Delivering Experience" title="Delivering Experience Since 2009"/>
+            <img src="cleats.png" alt="Productivity Delivering Experience" title="Delivering Experience Since 2009"/>
         </div>
 
         <div class="col-7">
