--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </div>
             <div class="mainMenu">
                 <div class="mainfont">
-                <a id = "homeButt"href=""><span>Home</span></a>
-                <a id = "camButt" href=""><span>AI Coach</span></a>
+                <a id = "homeButt" href=""><span style="margin-left:50px">Home</span></a>
+                <a id = "camButt" href="aicoach.html"><span>AI Coach</span></a>
                 </div class="mainfont">
             </div class="mainMenu">
         </nav>
