--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </div>
             <div class="mainMenu">
                 <div class="mainfont">
-                <a id = "homeButt" href=""><span style="margin-left:50px">Home</span></a>
-                <a id = "camButt" href="aicoach.html"><span>AI Coach</span></a>
+                <a href=""><span>Home</span></a>
+                <a href="aicoach.html"><span>AI Coach</span></a>
                 </div class="mainfont">
             </div class="mainMenu">
         </nav>
@@ -58,11 +58,9 @@
     </section>
 
     <section id="delivery">
-<<<<<<< Updated upstream
+
         <h1 id="services" class="sec-heading">SERVICES</h1>
-=======
         <h1 id="services" class="sec-heading">Services</h1>
->>>>>>> Stashed changes
         <div class="col-5 delivery-img">
             <img src="aisock.png" alt="Productivity Delivering Experience" title="Delivering Experience Since 2009"/>
         </div>
