--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!--Designed by CodingTuting.Com-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,6 +17,15 @@
 </head>
 <body>    
     
+
+    <div id = "wrapper">
+        <video autoplay muted loop id="video-background">
+            <source src="messi.mp4" type="video/mp4">
+            <!-- Add more source tags for other video formats -->
+          </video>
+        <div id = "tint"></div>
+    </div>
+
     <header id="topHeader">
         
         <nav>
@@ -29,7 +37,7 @@
             <div class="mainMenu">
                 <div class="mainfont">
                 <a href=""><span>Home</span></a>
-                <a href="aicoach.html"><span>AI Coach</span></a>
+                <a href="aicoach.html"><span style="color: #ffffff">AI Coach</span></a>
                 </div class="mainfont">
             </div class="mainMenu">
         </nav>
@@ -42,8 +50,8 @@
                 <hr class="straight-line">
                 <h1 style="padding-left:330px">GOLDEN FOOT</h1>
                 <div id="intro-tag-btn", class="straight-line2">
-                    <span>Certified by Lionel Messi</span>
-                    <button onclick="location.href='#services'" class="brand-btn">GOALLL!!!</button>
+                    <span style="color:#ffffff">Certified by Lionel Messi</span>
+                    <button onclick="location.href='#services'" class="brand-btn">GOAL!!!!</button>
                 </div>
             </div>
         </div>
@@ -59,13 +67,12 @@
 
     <section id="delivery">
 
-        <h1 id="services" class="sec-heading">SERVICES</h1>
-        <h1 id="services" class="sec-heading">Services</h1>
+        <h1 id="services" class="sec-heading" style="color:#2E2E2E">Services</h1>
         <div class="col-5 delivery-img">
             <img src="aisock.png" alt="Productivity Delivering Experience" title="Delivering Experience Since 2009"/>
         </div>
         <div class="col-7">
-            <h2>AI SOCCER COACH</h2>
+            <h2 style="color:#2E2E2E">AI SOCCER COACH</h2>
             <p>
                 Our AI coach analyzes your gameplay and provides statistics and practical live coaching. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/> It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
             </p>
@@ -73,19 +80,15 @@
                 <a href="" class="brand-btn">Contact Us</a>
             </div>
         </div>
-    </br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
+
         <div class="col-5 delivery-img">
             <img src="cleats.png" alt="Productivity Delivering Experience" title="Delivering Experience Since 2009"/>
         </div>
-
+<br>
+<br>
+<br>
         <div class="col-7">
-            <h2>GOLDEN FOOT</h2>
+            <h2 style="color:#2E2E2E">GOLDEN FOOT</h2>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/> It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
             </p>
