--- a/aicoach.html
+++ b/aicoach.html
@@ -1,5 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
     <link rel="stylesheet" href="AiCoach.css">
-<h1>Hello</h1>
+    <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Red+Hat+Display:wght@300&family=Tangerine&family=Ysabeau:wght@300&display=swap" rel="stylesheet">
+   
+    <header id="topHeader">
+        
+        <nav>
+            <img id="logodesign" src="logo.png">
+            <span class="logo">MessiVision</span>
+            <div class="menu-btn-3" onclick="menuBtnFunction(this)">
+                <span></span>
+            </div>
+            <div class="mainMenu">
+                <div class="mainfont">
+                <a href="index.html"><span>Home</span></a>
+                <a href="aicoach.html"><span>AI Coach</span></a>
+                </div class="mainfont">
+            </div class="mainMenu">
+        </nav>
+    </header>
+<h1>AI SOCCER COACH</h1>
+<style>
+    body{
+        background-image: url('soccerbackground.jpg');
+
+    }
+</style>
 </html>
